fixat dark mode, flyttat upp render api till navba

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,68 +1,74 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: "Playfair Display", sans-serif;
-    background-image: url(../IMAGES/bg.jpg);
-    
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Playfair Display", sans-serif;
+  background-image: url(../IMAGES/bg.jpg);
 }
 
-.navbar{
-    list-style-type: none;
-    margin: 0px;
-    padding: 0px;
-    overflow: hidden;
-    background-color: #333;
+.navbar {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  overflow: hidden;
+  background-color: #333;
 }
 
 li {
-    float: left;
+  float: left;
 }
 
 li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
 #articleDiv {
-    background-color: rgba(150, 132, 54, 0.445);
-    font-size: 20px;
-    margin: auto;
-    font-weight: 900;
-    padding: 50px;
-    margin-top: 20px;
+  background-color: rgba(150, 132, 54, 0.445);
+  font-size: 20px;
+  margin: auto;
+  font-weight: 900;
+  padding: 50px;
+  margin-top: 20px;
 }
 
-#renderArticles {
-    background-color: beige;
-    border: 0;
-    padding: 15px;
-    font-size: 20px;
-    border: 1px solid black;
+#renderArticles,
+#buttonForMode {
+  background-color: beige;
+  border: 0;
+  padding: 15px;
+  font-size: 20px;
+  border: 1px solid black;
+  margin-bottom: 15px;
 }
 
-#renderArticles:hover {
-    background-color: white;
-    color: black;
+#renderArticles:hover,
+#buttonForMode:hover {
+  background-color: white;
+  color: black;
 }
 
 hr {
-    border: solid 2px silver;
+  border: solid 2px silver;
 }
 
 img {
-    width: 300px;
-    margin: 20px;
+  width: 300px;
+  margin: 20px;
+}
+
+h1 {
+  margin-top: 15px;
 }
